--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,24 +1,24 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/carc2844/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/carc2844/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/carc2844/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/carc2844/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=zcox2XJAms574" rel="nofollow">大纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=D8Ax1TtAnol74" rel="nofollow">动态网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=G5IN0M9kn5F64" rel="nofollow">神州</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wf4N4cAnik9Rs0" rel="nofollow">退党</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oQhDrP9jaNomgd953b1AgeVB1TtAnol74" rel="nofollow">九评</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=8D43fA4loYFTi0" rel="nofollow">网门</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Sp8g2msSlexkp0" rel="nofollow">神韵</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=ZiIMbsVmsNV54" rel="nofollow">新纪元</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=oTQid61TrHh44" rel="nofollow">看中国</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=tOA2cZR4kmZ74" rel="nofollow">明慧网</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=sM1DqTVg5hMgn4FQl7oQjflQm187n3t4q0" rel="nofollow">明慧十方</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=vPRklaR07gs12hxAhrdwgbJkm7RxrotQgI12" rel="nofollow">明慧焦点</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Nug07FB5h2d64" rel="nofollow">希望之声</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=Trlljilh3b4huwVSsHESoz5SvBo5o-J7l0" rel="nofollow">漫谈党文化</a ></p><p><a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=C9gN1Qpkmpp74" rel="nofollow">新唐人</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=LrN5nvs5grJMkhpwijNQ48Z2nK5nsu12" rel="nofollow">亚太台</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=yNJnohBwu4JRnM12" rel="nofollow">直播</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=UkhBjj9N2703cJEnpFp7aDNCryFD8jdCoAB44" rel="nofollow">传奇</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=RpJRggtN0fc1hvNmsJMmoxZmsDgBpVBDl0" rel="nofollow">神话</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=7Hlmvylie_4ytNRDoYI7sOVDrSsQtKxmh0" rel="nofollow">人生</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7Vx128g1qYAlkBk5kBlmnpDbvZCtMR54" rel="nofollow">伪火</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=QoxBgvpN29ghhs95sKQCpwN6sEklpUVTl0" rel="nofollow">真相片</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=I01Am7VN0tEklpp46nNBniFA4zNSsTx54" rel="nofollow">藏字石</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=hZZTpYJ38DA2aR8mvNV6cfhAha9B2XJAms574" rel="nofollow">短视频</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=4ExCsLpie-gitI9Sv-UTtTRToVE4tHZ6g0" rel="nofollow">告诉未来</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=F5tQn4dM6s000tEklpp46nNBniFA4zNSsTx54" rel="nofollow">终级目的</a> | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=i_V7oZxP9wAOaQk6vOZS3etQhddl2WhQmv174" rel="nofollow">中共活摘</a > | <a href="https://glcdn.githack.com/szzdlab/oo/raw/master/jump2.htm?id=wcNAlbFM4kwgk8pQm38QibBRhtU6m7d4r0" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/Capitol_Building-320x200.jpg"><p align="center">中共不配合疫情调查 美参众议员推法案制裁</p></a>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2020/05/Untitled-18-320x200.jpg"><p align="center">【直播】5.16疫情追踪：中国64万病资外泄</p></a>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1" title="【直播】5.16疫情追踪：中国64万病资外泄""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Untitled-18-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1" title="中共不配合疫情调查 美参众议员推法案制裁""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Capitol_Building-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1" title="【直播】5.16疫情追踪：中国64万确诊外泄""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/Untitled-18-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113626.md#1" title="【最新疫情5·16】川普或恢复世卫部分资助""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/419c85d9fb01d1800a74cf50db7a965d-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113707.md#1" title="【一线采访】舒兰书记被免 更多疫情细节曝光""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/aac42fc2f187642a16e694527e030e3b-320x200.png">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12113566.md#1" title="美官员：未保证台积电可向华为出售美技术""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/10/cfa9d2b7efcdd7121f3fcd63100c23a5-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112803.md#1" title="全球政要贺大法日 向李洪志先生致敬（1）""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/0007-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/2/22/n11886913.md#1" title="【思想领袖】中共为何念念不忘征服台湾？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/04/9eba6f3503ad099a478674431a7a7a01-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113049.md#1" title="【新闻看点】弗林案峰回路转 美政坛最大丑闻？""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-615530474-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113248.md#1" title="中共瞒疫引发全球诉讼潮 土耳其律师递诉状""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/court_05-2-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113285.md#1" title="促美上市中企遵从监管 川普或祭行政令""><img width="73" src="https://i.epochtimes.com/assets/uploads/2019/04/GettyImages-928690844-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113219.md#1" title="武汉“十天会战”全民测核酸 外界多质疑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1213060777-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112699.md#1" title="【直播】5·15川普在总统表彰仪式上讲话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-65-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106752.md#1" title="【最新疫情5·15】川普：有无疫苗都要重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1225064279-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>6分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1">中共不配合疫情调查 美参众议员推法案制裁</a><br>
-:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114129.md#1">因疫情滞留 德女游客：台湾人友善防疫棒</a><br>
-:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1">【直播】5.16疫情追踪：中国64万确诊外泄</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114497.md#1">美众议院通过3万亿美元疫情援助法案</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114454.md#1">访民唐云淑、丁灵杰在河北租处被警带走</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114254.md#1">瑞幸咖啡香港及开曼群岛资产被冻结</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1">【直播】5.16疫情追踪：中国64万病资外泄</a><br>
+:clock8: <em>19分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1">中共不配合疫情调查 美参众议员推法案制裁</a><br>
+:clock8: <em>42分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114129.md#1">因疫情滞留 德女游客：台湾人友善防疫棒</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114497.md#1">美众议院通过3万亿美元疫情援助法案</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114454.md#1">访民唐云淑、丁灵杰在河北租处被警带走</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114254.md#1">瑞幸咖啡香港及开曼群岛资产被冻结</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109049.md#1">网曝习近平讲话：中共内部有“反习集团”</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110735.md#1">【翻墙必看】女预言家：2020年大决战</a><br>
@@ -30,18 +30,18 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109191.md#1">对北京失望 川普：签协议时中共已知疫情爆发</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112938.md#1">赚外汇能力快速下滑 中国资金外逃加速</a><br>
 <br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113049.md#1">【新闻看点】弗林案峰回路转 美政坛最大丑闻？</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113236.md#1">周晓辉：川普反击开弓 北京难承重负</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112910.md#1">陈思敏：吉林省疫情告急背后的人权灾难</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110545.md#1">【名家专栏】疫苗遥遥无期 不如现在重启经济</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113024.md#1">颜丹：抗疫医生跳楼 死因令人心酸</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110809.md#1">【十字路口】美中要全面脱钩 中国五大经济警讯</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12111384.md#1">王赫：中共“疫情外交”中的五记蠢招</a><br>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12110593.md#1">隐瞒参与千人计划 美华裔医生涉欺诈被捕</a><br>
 <br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,192,868 人
+!共 356,195,475 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
@@ -115,8 +115,8 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/5/n12085029.md#1">【名家专栏】美社交媒体充当“老大哥”</a><br>
 <br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf6092.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>传统文化</strong></p></h2><a href="https://github.com/carc2844/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/4/13/n12026603.md#1">【命理】皇帝命是怎样来的？</a><br>
+<a href="https://github.com/carc2844/djy/blob/master/gb/20/4/12/n12024879.md#1">【馨香雅句】周公制礼 哪些影响上千年</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/6/n12088827.md#1">中国人的姓名字号（3）</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/4/25/n12061244.md#1">贾宝玉和薛宝钗的金玉之缘</a><br>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/12/n12103093.md#1">沉溺于酒乡忘却天命 马周受点化终成股肱之臣</a><br>
-<a href="https://github.com/carc2844/djy/blob/master/gb/20/3/14/n11939927.md#1">善能量超时空 几年后扭转“要命”时刻</a><br>
 <br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/news2007.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>大纪元重要书籍</strong></p></h2><a href="https://github.com/carc2844/djy/blob/master/gb/nf3541.md#1" target="_blank">《九评共产党》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1235328.md#1" target="_blank">《共产主义的终极目的》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1267582.md#1" target="_blank">《魔鬼在统治着我们的世界》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf3628.md#1" target="_blank">《解体党文化》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1242535.md#1" target="_blank">《真实的江泽民》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1138304.md#1" target="_blank">《中国历史正述》</a><br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1076978.md#1" target="_blank">《千古英雄人物》</a><br><br><p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf3046.md#1">更多......</a></p></td></tr></table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1<br><a href="https://github.com/carc2844/djy/blob/master/gb/nf1351518.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/nf1351518.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf1351518.htm">https://www.epochtimes.com/gb/nf1351518.htm</a>    （国内需<a href="https://github.com/carc2844/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
