--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,10 +13,10 @@
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112699.md#1" title="【直播】5·15川普在总统表彰仪式上讲话""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-65-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12106752.md#1" title="【最新疫情5·15】川普：有无疫苗都要重启""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1225064279-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/carc2844/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://carc2844.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1">【直播】5.16疫情追踪：中国64万病资外泄</a><br>
-:clock8: <em>31分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1">中共不配合疫情调查 美参众议员推法案制裁</a><br>
-:clock8: <em>53分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114129.md#1">因疫情滞留 德女游客：台湾人友善防疫棒</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114497.md#1">美众议院通过3万亿美元疫情援助法案</a><br>
+:clock8: <em>28分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114542.md#1">【直播】5.16疫情追踪：中国64万病资外泄</a><br>
+:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12113326.md#1">中共不配合疫情调查 美参众议员推法案制裁</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114129.md#1">因疫情滞留 德女游客：台湾人友善防疫棒</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114497.md#1">美众议院通过3万亿美元疫情援助法案</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114454.md#1">访民唐云淑、丁灵杰在河北租处被警带走</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114254.md#1">瑞幸咖啡香港及开曼群岛资产被冻结</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
@@ -41,7 +41,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 356,195,475 人
+!共 356,198,519 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
