--- a/gb/nf3046_3.md
+++ b/gb/nf3046_3.md
@@ -10,6 +10,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/1/n11907505.md#1" target="_blank">洛杉矶“真相长城”庆贺3.5亿人“三退”</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/1/n11907505.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/03/IMG_6198-150x120.jpg" align ="left"></a>2月29日（周六）早上九点，洛杉矶部分法轮功学员于洛杉矶蒙特利公园市（Monterey Park）巴恩斯公园（Barnes Park）举行集体炼功；下午一点，在华人商家密集的丁胖子广场附近拉横幅、筑“真相长城”，声援三亿五千万中国人退出中共党、团、队组织，获得不少路过的车辆鸣笛支持，还有民众当场申请退出中共的少先队。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年03月02日 2:49 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/14/n11868618.md#1" target="_blank">疫灾中自保 村大队长让一家三代人“三退”</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/14/n11868618.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/dmhj-y9v4aa5k0r-150x120.jpg" align ="left"></a>自武汉新型冠状病毒爆发后，中共一直在掩盖疫情，草芥人命。海外法轮功学员利用各种途径告诉大陆民众真相，越来越多的人认清中共邪恶的本质，纷纷“三退”（退出中共党、团、队组织）自保。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月25日 7:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/20/n11884306.md#1" target="_blank">【退党中心特稿】中共祸害广 国人快“三退”</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/20/n11884306.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/aac356159b33a86ac7227152d4e0116a-150x120.jpg" align ="left"></a>冬春之交，武汉中共肺炎疫情爆发，蔓延全国，乃至30个国家和地区，对14亿中国人的生命安全，构成严重威胁。100多个国家或地区，对入境旅客，特别是中国旅客，采取管制措施。中共正陷入有史以来最大的危机中。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月21日 12:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/11/n11931419.md#1" target="_blank">每日三退声明精选（2020/03/10）</a><br></h3>当年在学校加入过共产党的少先队、共青团，以为是进步的，现在明白是当年年少无知，被蒙蔽、利用了。共产党最擅长的就是谎言加暴力，他利用年轻人追求进步的心理，把自己包装成进步的民主的正义的，可实际上恰恰相反。为什么中共政府要树立网路防火墙？为什么全球大部分人都可以正常使用的网站共产党要限制中国人登陆呢？为什么中共要限制媒体自由？（党媒姓党，党媒不是新闻媒体，是宣传.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年03月11日 11:33 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/10/n11928592.md#1" target="_blank">每日三退声明精选（2020/03/09）</a><br></h3>我和母亲都不是中共党员，我入过少先队，母亲入过共青团。从初中开始，我就已经认清共产恶魔的狰狞嘴脸，一直拒绝入团，没沾过共产党半毛钱的好处。母亲以前在国企工作，公司老总、副老总都是中共党员，用尽各种手段排挤非党员高级技术人员，公开在公司内包二奶，明目张胆地挪用公款、贪污，最后终于把公司搞破产了。副老总最后把国有企业贱卖给另一家私人控制的所谓央企，但因为对新东家.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年03月10日 10:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/9/n11926519.md#1" target="_blank">每日三退声明精选（2020/03/08）</a><br></h3>生在沦陷区最大的不幸，莫过于对邪恶的纵容。也许我一个人无法改变一切，但是，确实如你们所说的一样，每个人都有能力和这个中共所犯下的邪恶说不。三反五反，大跃进，文革，六四，非法残害无辜的法轮功学员，到如今人为释放生化武器（武汉病毒）残害全世界，虽然自己没有亲手做过，但是自己的沉默和纵容就是形同助纣为虐。我今天在此决定，接受你们长久以来的呼喊，公开退出中共党团队.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年03月09日 2:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/3/8/n11923653.md#1" target="_blank">每日三退声明精选（2020/03/07）</a><br></h3>这次中共肺炎（俗称武汉肺炎）看出，中共暴力统治，瞒报疫情，草菅人命。疫情没有控制住就强制复工，不管民生，只为统治集团的利益。老百姓只能自救，远离中共，远离邪恶才有出路。在此声明曾经加入的党团队组织，以铭心迹。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年03月08日 9:34 AM							</td></tr>
@@ -32,6 +33,5 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/20/n11881944.md#1" target="_blank">每日三退声明精选（2020/02/19）</a><br></h3>自从中共肺炎爆发以来，我作为一名医务工作者，深感中国共产党的腐败无能，对生命的漠视，对人民的无情！现特此声明，本人茉莉和儿子杨乐退出曾经加入的共青团和少先队组织，重新开始新生活。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月20日 10:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/19/n11879256.md#1" target="_blank">每日三退声明精选（2020/02/18）</a><br></h3>这几年来因为一些原因接触了翻墙，才开始慢慢看到大陆的问题根源就在于中共。这次疫情死了那么多人，这个政权还在那里骗人，就真的很像切尔诺贝利的情况。什么模式，什么大国，都跟我无关。我就是个人，我连做人的权利和利益都要变成少数人的肥料。共产邪教什么货色，现在才知道。我以前也被骗过，我现在醒了。够了，到现在还有那么多人在骗人。这个政权只有死了我才会有活路。我以前看不.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月19日 10:58 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/18/n11876432.md#1" target="_blank">每日三退声明精选（2020/02/17）</a><br></h3>我大约06年接触到大纪元的《九评》系列著作，事实陈述虽不完全认同，但观点却有醍醐灌顶之效。至于“三退”因本人自带反共基因，除了小学懵懂无知，误入歧途加入过邪党毒害青少年组织外，再没跟恶党有过任何瓜葛，成年后不遗余力追求对暴政血债历史的了解，因此自认清白。然而促使我决定正式写这篇文字的原因源于去年的反送中。因为香港自由之火越燃越高，大纪元，新唐人，希望之声的媒.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月18日 11:08 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/2/17/n11875621.md#1" target="_blank">郑一见：从自焚谎言到武汉封城</a><br></h3>二零二零年一月二十三日武汉由于疫情失控宣布封城。正是从这一刻起，中共肺炎（俗称武汉肺炎）的谎言一个接一个的被拆穿。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年02月18日 12:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/carc2844/djy/blob/master/gb/nf3046_3.md#1<br><a href="https://github.com/carc2844/djy/blob/master/gb/nf3046_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/nf3046_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_3.htm">https://www.epochtimes.com/gb/nf3046_3.htm</a>    （国内需<a href="https://github.com/carc2844/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
