--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,6 +2,7 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112031.md#1" target="_blank">爽口靓丽的Smoothie 简单搭配更健康</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112031.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/Fotolia_152484245_Subscription_L-320x200.jpg" align ="left"></a>炎炎夏日，喝什么呢？来一杯爽口的思慕雪（Smoothie）吧！思慕雪略不同于冰沙（Sorbet）和奶昔（Milkshake），原材料主要是各式水果和绿叶蔬菜，所以搭配得当的话，可以是非常天然、健康的饮品。用水果边角料和小零食稍做妆点的思慕雪看起来赏心悦目，让夏日胃口不振的你乐于尝试。
 
 因为思慕雪多采用新鲜水果，所.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 3:43 PM	</td></tr>
+<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114238.md#1" target="_blank">宅在家 日网友挑战一天靠电锅吃五餐 新手也可以！</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/16/n12114238.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/afd076319bb0353ef71d6dec790bd4b6-150x120.jpg" align ="left"></a>在台湾电锅可以说是家家户户必备的厨房用具；不过大多拿来煮饭或蒸东西；但一位来台的日本网友把它发挥到极致，还说它是一个神奇的用具，为了实验它到底有多神奇，他要用电锅煮五餐，而且还每一餐都不同。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月17日 12:16 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109244.md#1" target="_blank">【胡乃文开讲】揉揉腹部3分钟 宿便排干净 中医教你解腹痛</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12109244.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/fa17872850338010524c38f2bf64cd9f-150x120.jpg" align ="left"></a>肚子痛怎么办？先分清楚是上腹还是下腹痛。我们谈一谈常见三种腹痛：宿便痛、便秘和腹泻疼痛以及盲肠痛。按摩小腹，用这个方法来排宿便。如果腹泻跟便秘经常交替出现，这种状况可能是肠躁症。按摩天枢穴，能够改善肠躁症，止泻、助排便。阑尾炎发作时，痛得不得了。阑尾炎的痛跟腹泻痛、便秘痛不一样。按阑尾穴，可以缓解阑尾炎的疼痛。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 11:02 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112657.md#1" target="_blank">李小龙19句发人深省经典语录</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/15/n12112657.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2005/09/5091309401457-150x120.jpg" align ="left"></a>功夫巨星李小龙开创了许多武打奇迹，成就惊人，他说过许多话，透露不凡的人生哲学。读李小龙语录，或能了解他的成功之道，获得一些启发。本文搜集19则李小龙经典名句，值得我们细细品味。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 9:07 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12110280.md#1" target="_blank">皮肤长疹子或水泡？中共肺炎4类奇特新症状</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/14/n12110280.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/shutterstock_1682165356-150x120.jpg" align ="left"></a>中共肺炎（又称武汉肺炎、COVID-19）持续肆虐，时至今日，病毒愈来愈多变，造成感染者出现许多难以想像的病症：从嗅味觉异常、眼睛症状如结膜炎、皮肤症状如皮肤疹，一直到孩童出现像川崎氏症的“多系统综合炎症”，都令现今医疗措手不及。而中共病毒症状为何如此变化多端？郑元瑜说，目前也是......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月16日 2:42 AM			</td></tr>
@@ -36,6 +37,5 @@
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104556.md#1" target="_blank">大英博物馆200万件艺术品 图片免费使用</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104556.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/the-british-museum-4170670_1920-150x120.jpg" align ="left"></a>位于英国伦敦的大英博物馆（British Museum）是世界上最著名的博物馆之一，拥有大量收藏品，经常吸引来自世界各地的游客造访。但受到中共肺炎（武汉肺炎）疫情的影响，该馆目前关闭。也因为如此，该馆将网上收藏品增加至大约450万件，供人们在家里参观，而且允许人们免费使用其中大约200万件的图片。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 3:09 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104117.md#1" target="_blank">皮肤痒、大便黏腻是体内有湿？3碗汤饮除湿气</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/13/n12104117.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/05/body-humid-chinese-medicine-1200x800-150x120.jpg" align ="left"></a>皮肤痒、大便黏腻??身体出现10种症状，可能是体内有湿！中医师推荐3碗汤饮，帮你去除湿气。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 2:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/5/n12083987.md#1" target="_blank">学会解读梦境 纾解生活困境与疑惑</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/5/n12083987.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2011/12/100413103841100445-150x120.jpg" align ="left"></a>梦醒的时候，再重温一下梦境，并且感受梦中的情绪，让梦境再度浮现脑海。如果一直很难记住梦境，不妨利用假日多睡一会，或多赖一下床，有助于唤起梦境。还有跟周遭的亲朋好友诉说梦中景象，也可以帮助自己捕捉梦境故事。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 2:09 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/5/n12083968.md#1" target="_blank">过度专注细节 人际疏离 可能是强迫型人格障碍</a><br></h3><a href="https://github.com/carc2844/djy/blob/master/gb/20/5/5/n12083968.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/01/1211230840182382-e1460729626436-150x120.jpg" align ="left"></a>很多人分不清楚“强迫症”与“强迫型人格障碍”有什么不同，在此特别说明，可以帮助自己与周遭人更了解自我的身心状况。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年05月13日 2:06 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/carc2844/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/carc2844/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/carc2844/djy/blob/master/gb/news2008.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/carc2844/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/carc2844/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</p>
